--- a/index.html
+++ b/index.html
@@ -1,1 +1,89 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Technical Documentation</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+  <!-- Navigation Bar -->
+  <nav id="navbar">
+    <header>Documentation Topics</header>
+    <a class="nav-link" href="#Topic_1">Topic 1</a>
+    <a class="nav-link" href="#Topic_2">Topic 2</a>
+    <a class="nav-link" href="#Topic_3">Topic 3</a>
+    <a class="nav-link" href="#Topic_4">Topic 4</a>
+    <a class="nav-link" href="#Topic_5">Topic 5</a>
+  </nav>
+
+  <!-- Main Documentation Section -->
+  <main id="main-doc">
+
+    <!-- Section 1 -->
+    <section id="Topic_1" class="main-section">
+      <header>Topic 1</header>
+      <p>This is an introduction to Topic 1.</p>
+      <p>Topic 1 covers essential details about technical documentation.</p>
+      <p>It is important to understand the structure of a documentation page.</p>
+      <code>console.log('Hello World');</code>
+      <ul>
+        <li>Sub-point 1</li>
+        <li>Sub-point 2</li>
+      </ul>
+    </section>
+
+    <!-- Section 2 -->
+    <section id="Topic_2" class="main-section">
+      <header>Topic 2</header>
+      <p>This is an introduction to Topic 2.</p>
+      <p>We explore more advanced features of documentation here.</p>
+      <code>function myFunction() {}</code>
+      <ul>
+        <li>Sub-point 1</li>
+        <li>Sub-point 2</li>
+      </ul>
+    </section>
+
+    <!-- Section 3 -->
+    <section id="Topic_3" class="main-section">
+      <header>Topic 3</header>
+      <p>This is an introduction to Topic 3.</p>
+      <p>Variables are fundamental building blocks of programming.</p>
+      <code>let variable = 10;</code>
+      <ul>
+        <li>Sub-point 1</li>
+        <li>Sub-point 2</li>
+      </ul>
+    </section>
+
+    <!-- Section 4 -->
+    <section id="Topic_4" class="main-section">
+      <header>Topic 4</header>
+      <p>This is an introduction to Topic 4.</p>
+      <p>Conditional statements help control the flow of the program.</p>
+      <code>if (condition) {}</code>
+      <ul>
+        <li>Sub-point 1</li>
+        <li>Sub-point 2</li>
+      </ul>
+    </section>
+
+    <!-- Section 5 -->
+    <section id="Topic_5" class="main-section">
+      <header>Topic 5</header>
+      <p>This is an introduction to Topic 5.</p>
+      <p>Loops allow repetitive tasks to be automated in code.</p>
+      <p>The for-loop is commonly used for iteration in programming.</p>
+      <code>for (let i = 0; i < 10; i++) {}</code>
+      <ul>
+        <li>Sub-point 1</li>
+        <li>Sub-point 2</li>
+      </ul>
+    </section>
+
+  </main>
+
+</body>
+</html>
